--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 <link href="css/style2.css" rel="stylesheet" type="text/css">
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default;cantarell:n4:default;junge:n4:default;bebas-neue:n4:default;droid-serif:n4:default;quattrocento-sans:n4:default.js" type="text/javascript"></script>
 
 </head>
 
