--- a/satmap.html
+++ b/satmap.html
@@ -11,17 +11,21 @@
     
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/modern-antiqua:n4:default;arapey:n4:default;prata:n4:default;french-canon-small-caps:n4:default.js" type="text/javascript"></script>
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
+
 
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
 <link rel="stylesheet" href="css/multiple-select.css"/>
 <link rel="stylesheet" href="css/satstyle.css"/>
+<link rel="stylesheet" href="css/lightbox.css"/>
 
 <script src='js/jquery.js'></script> 
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src='js/jquery.multiple.select.js'></script>
 <script src='js/satmain.js'></script>
+<script src="lib/lightbox.min.js"></script>
+
 <!-- Dean: Added closing header tag -->
 </head>
 
@@ -33,7 +37,7 @@
         <ul>
             <li class="index"><a href="index.html">Introduction</a></li>
             <li class="map"><a href="map.html">Interactive Map</a></li>
-             <li class="satmap"><a href="satmap.html">Satellite Interactive Map</a></li>
+             <li class="satmap"><a href="satmap.html">Naked City Maps</a></li>
             <li class="credits"><a href="credits.html">Credits</a></li>
         </ul>
         </div>
@@ -42,7 +46,7 @@
     <div id="banner">
         <img src="img/arch_cropped.png" alt=""/>
         <!-- Dean: anglisized name -->
-        <h1>Interactive Map of <br>
+        <h1>&ldquo;<a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a>&rdquo; Maps of <br>
           Clerc&#8217;s 10th Arrondissement</h1>
     </div>
     
