--- a/satmap.html
+++ b/satmap.html
@@ -46,7 +46,7 @@
     <div id="banner">
         <img src="img/arch_cropped.png" alt=""/>
         <!-- Dean: anglisized name -->
-        <h1>&ldquo;<a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a>&rdquo; Maps of <br>
+        <h1><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps of <br>
           Clerc&#8217;s 10th Arrondissement</h1>
     </div>
     
