--- a/credits.html
+++ b/credits.html
@@ -5,7 +5,7 @@
 <link href="css/style3.css" rel="stylesheet" type="text/css">
 
 <link rel="shortcut icon" href="img/arch_cropped2.png">
-<title>10th Arrondissement Credits</title>
+<title>Credits</title>
 
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
@@ -18,16 +18,17 @@
 	<div class="nav">
       <ul>
             <li class="index"><a href="index.html">Introduction</a></li>
-            <li class="map"><a href="map.html">Interactive Map</a></li>
-             <li class="satmap"><a href="satmap.html">Satellite Interactive Map</a></li>
-            <li class="credits"><a href="credits.html">Credits</a></li>      </ul>
+            <li class="map"><a href="map.html">Subjective Marker Maps</a></li>
+            <li class="satmap"><a href="satmap.html">Naked City Maps</a></li>
+            <li class="credits"><a href="credits.html">Credits</a></li>       
+      </ul>
 	</div>
 </header>
 
 <div id="banner">
     	<img src="img/arch_cropped.png" alt=""/>
     	<h1>10th Arrondissement<br>
-    		Interactive Map<br>Project Credits</h1>
+    		Interactive Map Project<p class=emphasis>Credits</p></h1>
 </div>
 
 <div id="text">
