css some js changes
Fixed timeline, more css refinements. Almost there...

--- a/credits.html
+++ b/credits.html
@@ -26,7 +26,7 @@
 </header>
 
 <div id="banner">
-    	<img src="img/arch_cropped.png" alt=""/>
+    	<img src="img/rev_arch_cropped.png" alt="Image of an arch in the 10th Arrondissement"/>
     	<h1>10th Arrondissement<br>
     		Interactive Map Project<p class=emphasis>Credits</p></h1>
 </div>
