--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>
 
 	<div class="img">
-		<img src="img/Clerc_cover.png" width="800" height="551" alt="Photo of buildings"/>
+		<img src="img/revised_intro_image.png" alt="Image of buildings in the 10th Arrondissement"/>
 	</div>
 	<h1>A Psychogeographical Archeology of Thomas&nbsp;Clerc’s <br>
 	  <em class="title">Paris, musée du XXIe&nbsp;siècle, <br>
