--- a/map.html
+++ b/map.html
@@ -41,9 +41,9 @@
     </header>
 
     <div id="banner">
-        <img src="img/arch_cropped.png" alt=""/>
+        <img src="img/rev_arch_cropped.png" alt="Image of an arch in the 10th Arrondissement"/>
         <!-- Dean: anglisized name -->
-        <h1>Clerc&#8217;s Subjective Markers:<p class=emphasis>Interactive Map</p> 
+        <h1>Clerc&#8217;s Subjective Markers<p class=emphasis>Interactive Map</p> 
           </h1>
     </div>
     
@@ -76,7 +76,8 @@
 
 
 
-    <div id='leaflet-bottom leaflet-left'></div>
+    <div id='leaflet-bottom leaflet-left'>
+    </div>
 
     <!--vcr controls-->
     <div id="vcr-controls">
