--- a/map.html
+++ b/map.html
@@ -3,15 +3,15 @@
 <html>
     
 <head>
-<meta charset="utf-8"/>
-<!-- Dean: Added Arch icon to tab -->
+<meta charset="UTF-8">
+<!-- Dean: Added Arch icon to tab
 <link rel="shortcut icon" href="img/arch_cropped2.png">
-<!-- Dean: Added "Map" and aglicized nameto tab -->
 <title>SM Maps</title>
     
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
 
 
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
