Final before Rob's comments

--- a/map.html
+++ b/map.html
@@ -48,7 +48,7 @@
     </div>
     
     <div id="menu">
-        <h2>Subjective Markers</h2>
+        <h2>Bornes de Clerc</h2>
 
         <button id = "checkAllBtn" class= "button">Check All</button>
         <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
