--- a/satmap.html
+++ b/satmap.html
@@ -33,7 +33,7 @@
         <div class="nav">
         <ul>
             <li class="index"><a href="index.html">Introduction</a></li>
-            <li class="map"><a href="map.html">Interactive Map</a></li>
+            <li class="map"><a href="map.html">Subjective Marker Maps</a></li>
              <li class="satmap"><a href="satmap.html">Naked City Maps</a></li>
             <li class="credits"><a href="credits.html">Credits</a></li>
         </ul>
