Josh's comments addressed
Still working on Rob's. Need to minimize some menus.

--- a/map.html
+++ b/map.html
@@ -40,15 +40,15 @@
         </div>
     </header>
 
-    <div id="banner">
+    <!-- <div id="banner">
         <img src="img/rev_arch_cropped.png" alt="Image of an arch in the 10th Arrondissement"/>
-        <!-- Dean: anglisized name -->
         <h1>Clerc&#8217;s Subjective Markers<p class=emphasis>Interactive Map</p> 
           </h1>
-    </div>
+    </div> -->
     
+
     <div id="menu">
-        <h2>Bornes de Clerc</h2>
+        <h2>Clerc&#8217;s Subjective Markers<br>Interactive Map</h2>
 
         <button id = "checkAllBtn" class= "button">Check All</button>
         <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
