--- a/satmap.html
+++ b/satmap.html
@@ -39,13 +39,14 @@
         </ul>
         </div>
     </header>
-    <div id="banner">
+    <!-- <div id="banner">
         <img src="img/rev_arch_cropped.png" alt="Image of an arch in the 10th Arrondissement"/>
-        <!-- Dean: anglisized name -->
-        <h1>Clerc&#8217;s Subjective Markers<br><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps</h1>
+        <h1></h1>
     </div>
+ -->
     <div id="menu">
-        <h2>Subjective Markers</h2>
+        <h2>Clerc&#8217;s Subjective Markers<br><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps</h2>
+        <button id = "minButton" class= "buttonMin"></button>
         <button id = "checkAllBtn" class= "button">Check All</button>
         <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
         <button id = "resetMapBtn" class= "button">Reset Map</button>
