--- a/map.html
+++ b/map.html
@@ -48,14 +48,19 @@
     
 
     <div id="menu">
-        <h2>Clerc&#8217;s Subjective Markers<br>Interactive Map</h2>
 
-        <button id = "checkAllBtn" class= "button">Check All</button>
-        <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
-        <button id = "resetMapBtn" class= "button">Reset Map</button>
-        <!-- <br></br> -->
-        <p id="checkedNum"></p>
-        <!-- <br></br> -->
+        <div class="mheader">
+            <h2>Clerc&#8217;s Subjective Markers
+            <span style= "color:red">Interactive Map</span></h2>
+
+            <button id = "checkAllBtn" class= "button">Check All</button>
+            <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
+            <button id = "resetMapBtn" class= "button">Reset Map</button>
+            <button id = "minButton" class= "buttonMin">+/-</button>
+            <!-- <br></br> -->
+            <p id="checkedNum"></p>
+        </div>
+        
         <div id="SubjectiveMarkers" class="scroll">
         </div>
     </div>
