--- a/satmap.html
+++ b/satmap.html
@@ -45,17 +45,23 @@
     </div>
  -->
     <div id="menu">
-        <h2>Clerc&#8217;s Subjective Markers<br><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps</h2>
-        <button id = "minButton" class= "buttonMin"></button>
-        <button id = "checkAllBtn" class= "button">Check All</button>
-        <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
-        <button id = "resetMapBtn" class= "button">Reset Map</button>
-        <!-- <br></br> -->
+        <div class="mheader">
+            <h2>Clerc&#8217;s Subjective Markers<br><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps</h2>
+
+            <button id = "checkAllBtn" class= "button">Check All</button>
+            <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
+            <button id = "resetMapBtn" class= "button">Reset Map</button>
+            <button id = "minButton" class= "buttonMin">+/-</button>
+            <!-- <br></br> -->
         <p id="checkedNum"></p>
-        <!-- <br></br> -->
-        <div id="SubjectiveMarkers" class="scroll">
         </div>
+        <!-- <br></br> -->
+
+            <div id="SubjectiveMarkers" class="scroll">
+            </div>
+
     </div>
+
     <div id='map'></div>
 	<div class="clr"></div>
     <div id="dvAllMyZooms"></div>
