--- a/satmap.html
+++ b/satmap.html
@@ -11,8 +11,6 @@
     
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/arapey:n4:default;de-walpergens-pica:n4:default;averia-libre:n4:default;english:n4:default;monsieur-la-doulaise:n4:default;special-elite:n4:default;averia-sans-libre:n4:default;homemade-apple:n4:default.js" type="text/javascript"></script>
-
 
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
 <link rel="stylesheet" href="css/multiple-select.css"/>
@@ -48,8 +46,8 @@
         <div class="mheader">
             <h2>Clerc&#8217;s Subjective Markers<br><a href="img/naked_city.jpg" data-lightbox="image-1" data-title="<center><i>The Naked City:</i> Debord's 1957 Map of Paris">Naked City</a> Maps</h2>
 
-            <button id = "checkAllBtn" class= "button">Check All</button>
-            <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
+<!--             <button id = "checkAllBtn" class= "button">Check All</button>
+ -->            <button id = "uncheckAllBtn" class= "button">Uncheck All</button>
             <button id = "resetMapBtn" class= "button">Reset Map</button>
             <button id = "minButton" class= "buttonMin">+/-</button>
             <!-- <br></br> -->
@@ -57,7 +55,7 @@
         </div>
         <!-- <br></br> -->
 
-            <div id="SubjectiveMarkers" class="scroll">
+            <div id="SubjectiveMarkers" class="scroll" style= "display: none">
             </div>
 
     </div>
